client/java-armeria-xds/src/test/resources/test-listener.yaml
name: <LISTENER_NAME>
api_listener:
  api_listener:
    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
    stat_prefix: ingress_http
    codec_type: AUTO
    route_config:
      name: local_route
      virtual_hosts:
        - name: local_service
          domains: [ "*" ]
          routes:
            - match:
                prefix: "/"
              route:
                cluster: <CLUSTER_NAME>
    http_filters:
      - name: envoy.filters.http.router
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
