client/java-armeria-xds/src/test/resources/test-tls-cluster.yaml
name: <NAME>
connect_timeout: 0.25s
type: <TYPE>
lb_policy: ROUND_ROBIN
load_assignment:
  cluster_name: <NAME>
  endpoints:
    - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: <PORT>
transport_socket:
  name: envoy.transport_sockets.tls
  typed_config:
    "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
